Updated social media links

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
             </form>
         </div>
         <div class="social-links">
-            <a href="https://www.instagram.com/" target="_blank" class="social-icon">
+            <a href="https://www.instagram.com/las_misartventures/" target="_blank" class="social-icon">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.linkedin.com/" target="_blank" class="social-icon">
+            <a href="https://www.linkedin.com/in/lanitam" target="_blank" class="social-icon">
                 <i class="fab fa-linkedin"></i>
             </a>
         </div>
