Changed background animation to waves effect
- Switched from fog to waves animation
- Updated project content and descriptions
- Enhanced layout and styling
- Improved overall visual design

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles_v2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="three.r134.min.js"></script>
-    <script src="vanta.fog.min.js"></script>
+    <script src="vanta.waves.min.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -77,20 +77,17 @@
     </section>
     <script src="script.js"></script>
     <script>
-    VANTA.FOG({
+        VANTA.WAVES({
         el: "#home",
         mouseControls: true,
         touchControls: true,
         gyroControls: false,
         minHeight: 200.00,
         minWidth: 200.00,
-        highlightColor: 0xf0bf53,
-        midtoneColor: 0xfc7a08,
-        lowlightColor: 0x2b0eb1,
-        baseColor: 0xfff3d5,
-        blurFactor: 0.70,
-        zoom: 2.00
-    })
-    </script>
+        scale: 1.00,
+        scaleMobile: 1.00,
+        color: 0x178c77
+        })
+        </script>
 </body>
 </html>
