Enhanced portfolio interactivity and content - Updated project descriptions and links - Refined responsive layout and styling

--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
                 <a href="#contact" class="cta-button secondary">Contact Me</a>
             </div>
         </div>
-        <div class="hero-scroll">
-            <div class="scroll-indicator"></div>
+        <!--<div class="hero-scroll">
+            <div class="scroll-indicator"></div> 
+        </div>-->
+    </section>
+
+    <section id="about" class="about">
+        <h2 class="section-title">About Me</h2>
+        <div class="about-content">
+            <p>
+                Hello! I'm Lanita, a UX Designer specializing in service design, research, and web development. I studied at Side School to integrate emerging AI technologies into my web design workflow. This site showcases the AI tools I've applied throughout the design process, along with outcomes and key takeaways. I hope you'll find inspiration for your own work!
         </div>
     </section>
 
