--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <i class="fas fa-bars"></i>
         </div>
         <ul class="nav-menu">
-            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -32,9 +32,6 @@
                 <a href="#contact" class="cta-button secondary">Contact Me</a>
             </div>
         </div>
-        <!--<div class="hero-scroll">
-            <div class="scroll-indicator"></div> 
-        </div>-->
     </section>
 
     <section id="about" class="about">
