Enhance visual styling of the website  - Improve spacing around and between paragraphs  - Improve consistency of cta buttons  - Changed font styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Portfolio | Welcome</title>
     <link rel="stylesheet" href="styles_v2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -29,7 +32,7 @@
             <p class="hero-subtitle">Side School Showcase</p>
             <div class="hero-cta">
                 <a href="#projects" class="cta-button">View My Work</a>
-                <a href="#contact" class="cta-button secondary">Contact Me</a>
+                <a href="#contact" class="cta-button">Contact Me</a>
             </div>
         </div>
     </section>
@@ -38,7 +41,13 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <p>
-                Hello! I'm Lanita, a UX Designer specializing in service design, research, and web development. I studied at Side School to integrate emerging AI technologies into my web design workflow. This site showcases the AI tools I've applied throughout the design process, along with outcomes and key takeaways. I hope you'll find inspiration for your own work!
+                Hello! I'm Lanita, a UX Designer specializing in service design, research, and web development. 
+            </p> 
+            <p>
+                I attended the Side School AI in Design Bootcamp to integrate emerging AI technologies into my web design workflow. This site showcases the AI tools I've applied throughout the design process, along with outcomes and key takeaways. 
+            </p>
+            <p>
+                I hope you'll find inspiration for ways to apply AI in your own work!
             </p>
         </div>
     </section>
