update: portfolio content and styling

--- a/index.html
+++ b/index.html
@@ -41,13 +41,16 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <p>
-                Hello! I'm Lanita, a UX Designer specializing in service design, research, and web development. 
+                Hello! I'm Lanita, a UX Designer specializing in creating user-centered experiences through service design, research,
+                and web development. I'm also exploring the exciting potential of AI in design!
             </p> 
             <p>
-                I attended the Side School AI in Design Bootcamp to integrate emerging AI technologies into my web design workflow. This site showcases the AI tools I've applied throughout the design process, along with outcomes and key takeaways. 
+                I attended the Side School AI in Design Bootcamp to learn how
+                to integrate these technologies into my workflow. This site showcases practical examples of how I've used AI tools to
+                improve my web design process, along with results and key insights.
             </p>
             <p>
-                I hope you'll find inspiration for ways to apply AI in your own work!
+                My goal is to share ideas and inspire you to explore AI in your own work.
             </p>
         </div>
     </section>
