--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 and web development. I'm also exploring the exciting potential of AI in design!
             </p> 
             <p>
-                I attended the Side School AI in Design Bootcamp to learn how
+                I attended the <a href="https://www.side.school/en/">Side School AI Accelerator for Designers</a> to learn how
                 to integrate these technologies into my workflow. This site showcases practical examples of how I've used AI tools to
                 improve my web design process, along with results and key insights.
             </p>
